--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "cdd",
   "version": "0.1.0",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && tsc",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "comp": "tsc -p tsconfig.components.json"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -24,7 +27,6 @@
     "typescript": "5.1.3"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
-  "main": "next.config.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/BoxPistols/cdd.git"
