--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "cdd",
+  "name": "cdd-ui",
   "version": "0.1.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "dev": "next dev",
-    "build": "next build && tsc",
+    "build": "next build && tsc -p tsconfig.components.json",
     "start": "next start",
-    "lint": "next lint",
-    "comp": "tsc -p tsconfig.components.json"
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
