--- a/tsconfig.components.json
+++ b/tsconfig.components.json
@@ -1,15 +1,15 @@
 {
   "extends": "./tsconfig.json",
-  "include": [
-    "src/components/**/*.ts",
-    "src/components/**/*.tsx"
-  ],
-  "exclude": [
-    "node_modules"
-  ],
   "compilerOptions": {
     "declaration": true,
     "outDir": "dist",
     "jsx": "react"
   }
+  // "include": [
+  //   "src/components/**/*.ts",
+  //   "src/components/**/*.tsx"
+  // ],
+  // "exclude": [
+  //   "node_modules"
+  // ],
 }
